Fix Dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,12 +20,12 @@
   --color-second : #fb5607;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   background: var(--background);
